--- a/HabitRPGJavaAPI/.classpath
+++ b/HabitRPGJavaAPI/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/httpcore-4.2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/httpmime-4.2.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/java-json.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
